# JuceTest

./: CMakeLists.txt  LICENSE  README.md  clang-format-all.sh
Source/: Main.cpp  MainComponent.cpp  MainComponent.h
